--- a/source_code/[Jang]corona.ipynb
+++ b/source_code/[Jang]corona.ipynb
@@ -2876,7 +2876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# model2 변수선택법(stepwise)"
+    "## model2 변수선택법(stepwise)"
    ]
   },
   {
