--- a/source_code/ML_project(Hyo).ipynb
+++ b/source_code/ML_project(Hyo).ipynb
@@ -1339,9 +1339,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "898134e386ccce05d9f96411c0684da78927688d00418bfec228c9f263b07ee6"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.12 ('ds_study')",
    "language": "python",
@@ -1359,7 +1356,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ee17d55dc0ca9bce57a88b37df1d91484e5972bfb6f99f6b64b7675185bf3789"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
